Add jQuery mobile and some configuration, Create login and reset password mobile pages

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,8 +5,8 @@
     = render partial: 'head'
 
     %link{ href: 'http://fonts.googleapis.com/css?family=Rosario', rel: 'stylesheet', type: 'text/css' }
-    = stylesheet_link_tag    "mobile", :media => "all"
-    = javascript_include_tag "mobile"
+    = stylesheet_link_tag    "hand_store", :media => "all"
+    = javascript_include_tag "hand_store"
 
     = csrf_meta_tags
 
