--- a/app/views/hand_store/index.html.haml
+++ b/app/views/hand_store/index.html.haml
@@ -19,7 +19,7 @@
     %h1 Reset your password
   .content{ data: { role: 'content' } }
     %p
-      Your forget your password, we can help you.
+      Forget your password? We can help you.
     %p
       = form_tag '' do
         = email_field_tag :email, '', placeholder: 'Enter your email'
