- Add jquery mobile images - Use uncompresed versions of jquery mobile

--- a/app/views/hand_store/index.html.haml
+++ b/app/views/hand_store/index.html.haml
@@ -139,7 +139,7 @@
         url = $form.attr( 'action' );
     $.ajax({
       type: "POST",
-      url: 'http://did-store.herokuapp.com//users/sign_in',
+      url: 'http://did-store.herokuapp.com//users/sign_in.json',
       dataType: 'jsonp',
       data: { user: { email: email, password: password } },
       success: function(data){
