- Add ajax request for create an user WIP - Add some styles

--- a/app/assets/stylesheets/hand-store/base.css.scss
+++ b/app/assets/stylesheets/hand-store/base.css.scss
@@ -10,3 +10,7 @@ table#products-summary{
     }
   }
 }
+
+.float-center { margin: 0px auto !important; }
+.float-right { float: right !important; }
+.float-left { float: left !important; }
